-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
None
-
Windows 7 SP1 (x64)
-
824df695ad99d6096c2744bd476f75822cee1323 (qtactiveqt/5.6, 9.10.2015,5.6b)
As of today, IDC crashes when attempting to register a ActiveQt COM DLL as post-build event, if the DLL depends on other DLL(s) in the same folder. The reason for this is because IDC loads the DLL using LoadLibrary, which does NOT add the folder containing the DLL to the search path when loading dependencies [it does add add the path to the executable, though, which does not help here].
Alternative solutions:
- Replace LoadLibrary(filename) with LoadLibraryEx(filename, NULL, LOAD_LIBRARY_SEARCH_DLL_LOAD_DIR) in qtactiveqt\src\tools\idc\main.cpp. Unfortunately, this approach requires the filename to be a fully qualified path, which might be problematic
- Add DESTDIR to PATH at the start of the generated post-build script in qtbase\mkspecs\features\win32\idcidl.prf